<resources>
    <string name="app_name">Dotify</string>
    <string name="change_user">Change User</string>
    <string name="_0_plays">0 plays</string>
    <string name="artist">Illenium, Said the Sky, Annika</string>
    <string name="username">Username</string>
    <string name="title">Sad Songs</string>
    <string name="playlist">All Songs</string>
    <string name="playlistCover">Cover photo</string>
    <string name="shuffle">Shuffle</string>
    <string name="user">Your username</string>
    <string name="skipBack">Previous skip</string>
    <string name="skipForward">Skip forward</string>
    <string name="play">Adds one play</string>
    <string name="detailUsername">USERNAME:</string>
    <string name="detailFirstName">FIRST NAME:</string>
    <string name="detailLastName">LAST NAME:</string>
    <string name="detailPlatform">PLATFORM:</string>
    <string name="detailNose">HAS A NOSE:</string>
</resources>
