<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    tools:context=".Main2Activity">

    <ViewSwitcher
        android:id="@+id/vsUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvUser"
            android:layout_width="@dimen/user_width"
            android:layout_height="@dimen/user_height"
            android:clickable="false"
            android:gravity="center_vertical"
            android:text="@string/username"
            android:textSize="@dimen/user_size" />

        <EditText
            android:id="@+id/etUser"
            android:layout_width="@dimen/user_width"
            android:layout_height="@dimen/user_height"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:background="@null"
            android:gravity="center_vertical"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLength="12"
            android:text=""
            android:textSize="@dimen/user_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />
    </ViewSwitcher>

    <Button
        android:id="@+id/btnChange"
        android:layout_width="@dimen/button_height"
        android:layout_height="@dimen/user_height"
        android:text="@string/change_user"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/ivSongCover"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnChange"
        android:layout_marginTop="@dimen/margin"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ascend"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/tvSongTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivSongCover"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/title_margin_top"
        android:text="@string/title"
        android:textSize="@dimen/title_size" />

    <TextView
        android:id="@+id/tvSongArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/artist"
        android:layout_below="@+id/tvSongTitle"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/secondary_size" />

    <TextView
        android:id="@+id/tvPlayCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/tvSongArtist"
        android:layout_centerHorizontal="true"
        android:text="@string/_0_plays"
        android:textSize="@dimen/secondary_size" />

    <ImageView
        android:id="@+id/ivPrevious"
        android:layout_width="@dimen/func_button_length"
        android:layout_height="@dimen/func_button_length"
        android:layout_below="@+id/tvPlayCount"
        android:layout_toStartOf="@+id/ivPlay"
        android:layout_marginTop="@dimen/play_margin_top"
        app:srcCompat="@drawable/skip_previous"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/ivPlay"
        android:layout_width="@dimen/func_button_length"
        android:layout_height="@dimen/func_button_length"
        android:layout_below="@+id/tvPlayCount"
        android:layout_marginTop="@dimen/play_margin_top"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/play"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/ivNext"
        android:layout_width="@dimen/func_button_length"
        android:layout_height="@dimen/func_button_length"
        android:layout_below="@+id/tvPlayCount"
        android:layout_toEndOf="@+id/ivPlay"
        android:layout_marginTop="@dimen/play_margin_top"
        app:srcCompat="@drawable/skip_next"
        tools:ignore="ContentDescription"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</RelativeLayout>